# guardian-runtime

./: .gitignore  ARCHITECTURE.md  Article.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TEST.md  V1_LAUNCH_PLAN.md  article.md  cleaned_report.md  concept.md  final_test.py  index.html  pyproject.toml  test.md  test_models.py
.github/workflows/: ci.yml
docs/: USE_CASE_1_TERMINAL_CHATBOTS.md  USE_CASE_2_PRODUCTION_WEB_APPS.md  USE_CASE_3_DOCUMENT_ANALYSIS.md
examples/: quickstart.py
guardian/: __init__.py
guardian/cli/: dashboard.py  init.py  logs.py  main.py  proxy.py  status.py  validate.py
guardian/core/: engine.py  license.py  models.py  policy.py  storage.py
guardian/dashboard/: __init__.py  server.py
guardian/finops/: cost_calculator.py  token_counter.py
guardian/guards/: input_guard.py  output_guard.py
guardian/guards/validators/: jailbreak.py  pii.py
guardian/logging/: __init__.py  local.py
guardian/optimizer/: __init__.py  document_converter.py  input_optimizer.py  models.py
guardian/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
guardian/proxy/: __init__.py  server.py
guardian_runtime/: __init__.py
guardian_runtime/cli/: analytics.py  clean.py  convert.py  dashboard.py  init.py  logs.py  main.py  proxy.py  scan.py  status.py  validate.py
guardian_runtime/core/: engine.py  license.py  models.py  policy.py  storage.py
guardian_runtime/dashboard/: __init__.py  server.py
guardian_runtime/finops/: cost_calculator.py
guardian_runtime/guards/: input_guard.py  output_guard.py
guardian_runtime/guards/validators/: hallucination.py  pii.py
guardian_runtime/logging/: __init__.py  local.py
guardian_runtime/optimizer/: __init__.py  document_converter.py  input_optimizer.py  models.py
guardian_runtime/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
guardian_runtime/proxy/: __init__.py  server.py
policies/: agent-proxy.yaml  anthropic.yaml  dev.yaml  gemini.yaml  minimal.yaml  optimized.yaml  production.yaml
scripts/: benchmark_terse_mode.py  smoke_test.py
tests/: conftest.py
tests/integration/: test_full_flow.py
tests/unit/: test_document_converter.py  test_input_guard.py  test_jailbreak.py  test_optimizer.py  test_output_guard.py  test_pii.py  test_policy.py  test_providers.py  test_storage.py  test_token_counter.py
