[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardian-runtime"
version = "1.0.0"
description = "Local-first runtime governance layer for AI systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ashish Patil", email = "ashishtp2005@gmail.com" }]
keywords = [
  "ai", "llm", "governance", "guardrails", "finops",
  "pii", "jailbreak", "langchain", "openai", "gemini", "anthropic", "claude", "dpdp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "openai>=1.0",
  "anthropic>=0.40",
  "google-genai>=0.8.0",
  "tiktoken>=0.5",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "httpx>=0.25",
  "click>=8.0",
  "fastapi>=0.100",
  "uvicorn>=0.23",
  "markitdown[all]>=0.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-mock>=3.0",
  "ruff>=0.1",
  "mypy>=1.0",
]
presidio = [
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
]
langchain = [
  "langchain-core>=0.1",
]
all = ["guardian-runtime[presidio,langchain]"]

[project.urls]
Homepage = "https://github.com/ashp15205/guardian-runtime"
Documentation = "https://github.com/ashp15205/guardian-runtime#readme"
Repository = "https://github.com/ashp15205/guardian-runtime"
Issues = "https://github.com/ashp15205/guardian-runtime/issues"

[project.scripts]
guardian_runtime = "guardian_runtime.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["guardian_runtime"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
